--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ html {
   background-color: #fff;
   border-radius: 4px;
   box-shadow: 1px 4px 6px rgba(0, 0, 0, .5);
+  transition: all 250ms linear;
 }
 
 .polaroid > img {
