--- a/css/main.css
+++ b/css/main.css
@@ -12,11 +12,14 @@ html {
   border-radius: 4px;
   box-shadow: 1px 4px 6px rgba(0, 0, 0, .5);
   transition: all 250ms linear;
+  transform: rotate(30deg) scale(1.5) translate(300px, -50px);
 }
 
 .polaroid > img {
   display: block;
   width: 100%;
+  position: absolute;
+  bottom: .5em;
 }
 
 .polaroid > figcaption {
