--- a/css/main.css
+++ b/css/main.css
@@ -40,3 +40,14 @@ html {
   transform: rotate(9deg);
   z-index: 3;
 }
+
+.polaroid:nth-child(3) {
+  left: 40%;
+  top: 7em;
+  transform: rotate(35deg);
+  z-index: 2;
+}
+
+.polaroid:hover {
+  z-index: 30;
+}
