--- a/css/main.css
+++ b/css/main.css
@@ -51,3 +51,15 @@ html {
 .polaroid:hover {
   z-index: 30;
 }
+
+.polaroid:nth-child(1):hover {
+  transform: rotate(0deg);
+}
+
+.polaroid:nth-child(2):hover {
+  transform: rotate(0deg);
+}
+
+.polaroid:nth-child(3):hover {
+  transform: rotate(0deg);
+}
