--- a/css/main.css
+++ b/css/main.css
@@ -54,12 +54,15 @@ html {
 
 .polaroid:nth-child(1):hover {
   transform: rotate(0deg);
+  box-shadow: 1px 4px 6px rgba(0, 0, 0, 1);
 }
 
 .polaroid:nth-child(2):hover {
   transform: rotate(0deg);
+  box-shadow: 1px 4px 6px rgba(0, 0, 0, 1);
 }
 
 .polaroid:nth-child(3):hover {
   transform: rotate(0deg);
+  box-shadow: 1px 4px 6px rgba(0, 0, 0, 1);
 }
